# lambda-script

./: .gitignore  README.md  agent-amalgamate-ed.bat  agent-amalgamate-edd.bat  agent-amalgamate-eddy.bat  agent-amalgamate-guy.bat  agent-submit-ed.bat  agent-submit-edd.bat  agent-submit-eddy.bat  agent-submit-guy.bat  amalgamate-lambdascript-core.bat  amalgamate.bat  branch-dashboard.bat  create-targeted-onepush.bat  ed-land-json.bat  edd-land-json.bat  eddy-land-json.bat  eddy-sync-all.bat  forks.bat  gadget-amalgamate-ed.bat  gadget-amalgamate-edd.bat  gadget-amalgamate-eddy.bat  gadget-amalgamate-guy.bat  gadget-creation-ed.bat  gadget-creation-edd.bat  gadget-creation-eddy.bat  gadget-creation-guy.bat  git.config  guy-land-json.bat  image-metrics.bat  install.bat  land-anything.bat  land-anything.hat  onepush-ed.bat  onepush-edd.bat  onepush-eddy.bat  onepush-guy.bat  pull.bat  push.bat  status.hat  (+5 more)
docs/: BRANCH_DASHBOARD.md  CPP_FFI.md  DIFF_SPRING.md  DIFF_SPRING_EVIDENCE.md  EVIDENCE.md  INSTALL.md  PATCH_INTAKE_EVIDENCE.md  PATCH_INTAKE_V1.md  PORTABLE_SUBSET.md  REPRODUCIBILITY.md  SAFE_GIT_INTERFACE.md  TARBALL_SPRING.md  TARBALL_SPRING_EVIDENCE.md  THREE_ENDPOINT_BRIDGE.md  lambdascript-core-interchange.md
hat/src/hat/: hat.cabal
hat/src/hat/app/: Main.hs
hat/src/hat/src/: Hat.hs
projects/lambda-script/src/lambda-script/: lambda-script.cabal  package.bolt  package.cog  package.garrage  package.nut
projects/lambda-script/src/lambda-script/cog/: CogMain.hs
projects/lambda-script/src/lambda-script/exe/: Main.hs
projects/lambda-script/src/lambda-script/lib/: LambdaScript.hs
projects/lambda-script/src/lambda-script/lib/LambdaScript/: Compiler.hs  Forks.hs  Paths.hs
projects/lambda-script/src/lambda-script/lib/LambdaScript/Bridge/: Bridge.hs  Endpoint.hs
projects/lambda-script/src/lambda-script/lib/LambdaScript/Codegen/: Haskell.hs  TypeScript.hs
projects/lambda-script/src/lambda-script/lib/LambdaScript/Core/: Ast.hs  Check.hs  Diagnostic.hs  Program.hs
projects/lambda-script/src/lambda-script/lib/LambdaScript/Forks/: Amalgamate.hs  Gadget.hs  Git.hs  Hash.hs  Land.hs  MainHistory.hs  Patch.hs  ProcessResult.hs  ReplayLedger.hs  Submission.hs  Target.hs
projects/lambda-script/src/lambda-script/lib/LambdaScript/Gizmo/: Manifest.hs  Runner.hs  Types.hs
projects/lambda-script/src/lambda-script/lib/LambdaScript/Parser/: Parser.hs
projects/lambda-script/src/lambda-script/lib/LambdaScript/Runtime/: CppForeign.hs
projects/lambda-script/src/lambda-script/lib/LambdaScript/Sandbox/: Command.hs  Config.hs
projects/lambda-script/src/lambda-script/sandbox/: Main.hs
tools/milk_metrics/: README.md  pyproject.toml  requirements.txt
tools/milk_metrics/docs/: capabilities.md  classification_constitution.md  gadget-branch-only-landing.md  gadget-development.md  gadget-isolated-landing.md  main-history-smoke.md  one-call-transaction-smoke.md  sexual_visual_safety.md  smoke-test.md  visual_grammar.md
tools/milk_metrics/milk_metrics/: __init__.py  cli.py  color.py  convolution.py  gates.py  masks.py  metrics.py  proxies.py  registers.py  render.py  restoration.py
tools/milk_metrics/spec/: features.yaml  registers.yaml
tools/milk_metrics/test/: smoke.py
tools/milk_metrics/test/fixtures/: README.md  adult_reference_pose.png.b64  decode_fixture.py
tools/wavproc/: README.md  wavproc.cabal
tools/wavproc/src/: Main.hs
tools/wavproc/src/Audio/: Features.hs
tools/wavproc/src/Data/: WAVE.hs
tools/wavproc/src/Learn/: Model.hs
(+327 files in other folders)
