[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "milk-metrics"
version = "0.1.0"
description = "Rule-based diagnostic image metrics and conservative restoration search"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.26",
  "pillow>=10.0",
  "matplotlib>=3.8",
]

[project.scripts]
milk-metrics = "milk_metrics.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["milk_metrics*"]
