cabal-version: 3.0
name: wavproc
version: 0.2.0.0
build-type: Simple

executable wavproc
  main-is: Main.hs
  hs-source-dirs: src
  other-modules:
      Audio.Features
    , Data.WAVE
    , Learn.Model
  build-depends:
      base >=4.18 && <5
    , bytestring
    , directory
    , filepath
  default-language: Haskell2010
  ghc-options: -Wall -O2
