cabal-version: 3.0
name: hat
version: 0.1.0.0
build-type: Simple

library
  exposed-modules:
      Hat
  hs-source-dirs:
      src
  build-depends:
      base >=4.14 && <5
    , directory
    , filepath
    , process
  default-language:
      Haskell2010
  ghc-options:
      -Wall

executable hat
  main-is:
      Main.hs
  hs-source-dirs:
      app
  build-depends:
      base >=4.14 && <5
    , hat
  default-language:
      Haskell2010
  ghc-options:
      -Wall
